[tool.poetry]
name = "utilki"
version = "0.2.0"
description = "A collection of useful utilities"
readme = "README.md"
authors = ["Khaidar Bikmaev <khaidar@bikmaev.com>"]

[tool.poetry.dependencies]
python = ">=3.8.1"
click = "^8.1.3"
pydantic = "^1.10.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^23.3.0"
flake8 = "^6.0.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 78

[tool.poetry.scripts]
utilki = "utilki.cli:cli"