[tool.poetry]
name = "utilki"
version = "0.3.1"
description = "A collection of useful utilities"
readme = "README.md"
authors = ["Khaidar Bikmaev <khaidar@bikmaev.com>"]

[tool.poetry.dependencies]
python = ">=3.7"
click = "^8.1.3"
pydantic = "^1.10.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^23.3.0"
flake8 = "*"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 78

[tool.poetry.scripts]
utilki = "utilki.cli:cli"