[tool.poetry]
name = "utilki"
version = "0.10.0"
description = "A collection of useful utilities"
readme = "README.md"
authors = ["Khaidar Bikmaev <khaidar@bikmaev.com>"]

[tool.poetry.dependencies]
python = ">=3.10"
click = "^8.1.3"
pydantic = ">=2.5.0"
pandas = ">=1.3.3"
result = "^0.14.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
ruff = ">=0.1.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
utilki = "utilki.cli:cli"
ut = "utilki.cli:cli"

[tool.ruff]
preview = true
line-length = 78
extend-include = ["*.ipynb"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
ignore = [
    "ANN201",
    "CPY001",
    "D100",
    "D101",
    "D103",
    "DTZ005",
    "DTZ011",
    "FA100",
    "PGH003",
    "PGH004",
    "S105",
    "S106",
    "PLW1514",
    "PLR2004",
]

# select = ["ALL"]


[tool.mypy]
no_silence_site_packages = true
ignore_missing_imports = true
